--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "lint-staged": {
     "**/*.{tf,tfvars}": [
       "node scripts/terraform-multi-fmt",
-      "pushd iac && terraform-docs markdown table --output-file README.md --output-mode inject . && popd"
+      "./scripts/update-terraform-docs.sh"
     ],
       "**/*.py": [
       "black --fast"
