--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "husky": "9.1.7",
-    "lint-staged": "15.5.2"
+    "lint-staged": "15.5.2",
+    "prettier": "3.5.3"
   },
   "dependencies": {
     "lts": "^2.0.0"
