--- a/iac/modules/bedrock-rag/index-mapping.json
+++ b/iac/modules/bedrock-rag/index-mapping.json
@@ -1,20 +1,42 @@
 {
   "mappings": {
+    "dynamic_templates": [
+      {
+        "strings": {
+          "match_mapping_type": "string",
+          "mapping": {
+            "fields": {
+              "keyword": {
+                "ignore_above": 2147483647,
+                "type": "keyword"
+              }
+            },
+            "type": "text"
+          }
+        }
+      }
+    ],
     "properties": {
-      "vector": {
+      "AMAZON_BEDROCK_METADATA": {
+        "type": "text",
+        "index": false
+      },
+      "AMAZON_BEDROCK_TEXT_CHUNK": {
+        "type": "text",
+        "index": true
+      },
+      "bedrock-knowledge-base-default-vector": {
         "type": "knn_vector",
         "dimension": 512,
         "method": {
           "name": "hnsw",
-          "engine": "nmslib",
-          "space_type": "l2"
+          "engine": "faiss",
+          "space_type": "l2",
+          "parameters": {
+            "m": 16,
+            "ef_construction": 512
+          }
         }
-      },
-      "AMAZON_BEDROCK_TEXT_CHUNK": {
-        "type": "text"
-      },
-      "AMAZON_BEDROCK_METADATA": {
-        "type": "object"
       }
     }
   }
